--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width initial-scale=1.0'>
-    <title>Boilermaker</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width initial-scale=1.0" />
+    <title>JUKEEEEE</title>
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="/favicon.ico?v=juke" />
+    <link rel="stylesheet" href="/font-awesome.min.css" />
     <link rel="stylesheet" href="/style.css" />
     <script defer src="/bundle.js"></script>
   </head>
@@ -11,4 +18,3 @@
     <div id="app"></div>
   </body>
 </html>
-
